finish 'find road' part

--- a/shapefile process.ipynb
+++ b/shapefile process.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f0d540e6",
+   "execution_count": 50,
+   "id": "1808ca85",
    "metadata": {
     "scrolled": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de25aa22",
+   "id": "f3dfae9d",
    "metadata": {},
    "source": [
     "-----point file-----"
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ec88daf4",
+   "id": "efa9843b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "04d36161",
+   "execution_count": 48,
+   "id": "0a6b897d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_point['id'] = df_point.reset_index().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d0a4d970",
    "metadata": {},
    "outputs": [
     {
@@ -67,27 +77,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>POINT (-74.00698 40.74748)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "      <td>POINT (-74.00722 40.74722)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
        "      <td>POINT (-74.00721 40.74697)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
        "      <td>POINT (-74.00722 40.74722)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
        "      <td>POINT (-74.00728 40.74667)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -97,27 +107,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2295</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2295</td>\n",
        "      <td>POINT (-73.97976 40.71559)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2296</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2296</td>\n",
        "      <td>POINT (-73.97987 40.71361)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2297</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2297</td>\n",
        "      <td>POINT (-73.98387 40.72077)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2298</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2298</td>\n",
        "      <td>POINT (-73.97780 40.71833)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2299</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2299</td>\n",
        "      <td>POINT (-73.99446 40.72987)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -126,23 +136,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      id                    geometry\n",
-       "0    NaN  POINT (-74.00698 40.74748)\n",
-       "1    NaN  POINT (-74.00722 40.74722)\n",
-       "2    NaN  POINT (-74.00721 40.74697)\n",
-       "3    NaN  POINT (-74.00722 40.74722)\n",
-       "4    NaN  POINT (-74.00728 40.74667)\n",
-       "...   ..                         ...\n",
-       "2295 NaN  POINT (-73.97976 40.71559)\n",
-       "2296 NaN  POINT (-73.97987 40.71361)\n",
-       "2297 NaN  POINT (-73.98387 40.72077)\n",
-       "2298 NaN  POINT (-73.97780 40.71833)\n",
-       "2299 NaN  POINT (-73.99446 40.72987)\n",
+       "        id                    geometry\n",
+       "0        0  POINT (-74.00698 40.74748)\n",
+       "1        1  POINT (-74.00722 40.74722)\n",
+       "2        2  POINT (-74.00721 40.74697)\n",
+       "3        3  POINT (-74.00722 40.74722)\n",
+       "4        4  POINT (-74.00728 40.74667)\n",
+       "...    ...                         ...\n",
+       "2295  2295  POINT (-73.97976 40.71559)\n",
+       "2296  2296  POINT (-73.97987 40.71361)\n",
+       "2297  2297  POINT (-73.98387 40.72077)\n",
+       "2298  2298  POINT (-73.97780 40.71833)\n",
+       "2299  2299  POINT (-73.99446 40.72987)\n",
        "\n",
        "[2300 rows x 2 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceff5674",
+   "id": "bc34dfb5",
    "metadata": {},
    "source": [
     "-----road file-----"
@@ -162,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5f3c58c3",
+   "id": "d910fc2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "124ef461",
+   "id": "a2d95cf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "50e1ba7e",
+   "id": "2dff330e",
    "metadata": {
     "scrolled": true
    },
@@ -302,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0873fff1",
+   "id": "49dbeb1d",
    "metadata": {
     "scrolled": true
    },
@@ -326,64 +336,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81a012dd",
+   "metadata": {},
+   "source": [
+    "-----calculate distance between road and point-----"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d05df420",
+   "execution_count": 70,
+   "id": "70d055e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_line_string = linemerge([df_road.iloc[1][1], df_road.iloc[0][1]])"
+    "def find_closest_road(point, roads_df):\n",
+    "    min_distance = float('inf')\n",
+    "    closest_road_id = None\n",
+    "\n",
+    "    for idx, road in roads_df.iterrows():\n",
+    "        distance = point.distance(road['geometry'])\n",
+    "        if distance < min_distance:\n",
+    "            min_distance = distance\n",
+    "            closest_road_id = road['id']\n",
+    "\n",
+    "    return closest_road_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "02e04f72",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-74.01330511822232 40.7018626470412 0.007836884312339976 0.00409800667431881\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,81.40782330075672)\"><g><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"0.0001567376862467995\" points=\"-74.01301486324779,40.70215290201573 -74.01167427883152,40.702484973384905\" opacity=\"0.8\" /><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"0.0001567376862467995\" points=\"-74.01171117565032,40.7024726744453 -74.00998932410648,40.70278014793527 -74.00575848888451,40.70567039874099\" opacity=\"0.8\" /></g></g></svg>"
-      ],
-      "text/plain": [
-       "<MULTILINESTRING ((-74.013 40.702, -74.012 40.702), (-74.012 40.702, -74.01 ...>"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged_line_string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "057a6682",
+   "execution_count": 72,
+   "id": "a6647816",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_linestrings(group):\n",
-    "    return linemerge(group.tolist())"
+    "df_point['closest_road_id'] = df_point.apply(lambda row: find_closest_road(row['geometry'], df_road), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "053b1d22",
+   "execution_count": 75,
+   "id": "5b954cb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_gdf_road= df_road.groupby('id')['geometry'].apply(merge_linestrings).reset_index()"
+    "df_point.drop('Closest_Road_ID', axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "eb65e5f7",
+   "execution_count": 76,
+   "id": "16597f63",
    "metadata": {},
    "outputs": [
     {
@@ -409,99 +412,111 @@
        "      <th></th>\n",
        "      <th>id</th>\n",
        "      <th>geometry</th>\n",
+       "      <th>closest_road_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>MULTILINESTRING ((-74.01301 40.70215, -74.0116...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POINT (-74.00698 40.74748)</td>\n",
+       "      <td>119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>MULTILINESTRING ((-74.01270 40.70275, -74.0118...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POINT (-74.00722 40.74722)</td>\n",
+       "      <td>119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>MULTILINESTRING ((-74.01274 40.70146, -74.0098...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>POINT (-74.00721 40.74697)</td>\n",
+       "      <td>120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>LINESTRING (-74.00029 40.71119, -74.00045 40.7...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>POINT (-74.00722 40.74722)</td>\n",
+       "      <td>119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>LINESTRING (-73.99137 40.72726, -73.99139 40.7...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>POINT (-74.00728 40.74667)</td>\n",
+       "      <td>120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>248</td>\n",
-       "      <td>LINESTRING (-73.99741 40.72164, -73.99389 40.7...</td>\n",
+       "      <th>2295</th>\n",
+       "      <td>2295</td>\n",
+       "      <td>POINT (-73.97976 40.71559)</td>\n",
+       "      <td>234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>249</td>\n",
-       "      <td>LINESTRING (-74.00203 40.71159, -74.00252 40.7...</td>\n",
+       "      <th>2296</th>\n",
+       "      <td>2296</td>\n",
+       "      <td>POINT (-73.97987 40.71361)</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>250</td>\n",
-       "      <td>LINESTRING (-74.00296 40.71334, -74.00150 40.7...</td>\n",
+       "      <th>2297</th>\n",
+       "      <td>2297</td>\n",
+       "      <td>POINT (-73.98387 40.72077)</td>\n",
+       "      <td>221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>251</td>\n",
-       "      <td>LINESTRING (-74.00799 40.70899, -74.00720 40.7...</td>\n",
+       "      <th>2298</th>\n",
+       "      <td>2298</td>\n",
+       "      <td>POINT (-73.97780 40.71833)</td>\n",
+       "      <td>199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>252</td>\n",
-       "      <td>LINESTRING (-74.01411 40.70697, -74.01368 40.7...</td>\n",
+       "      <th>2299</th>\n",
+       "      <td>2299</td>\n",
+       "      <td>POINT (-73.99446 40.72987)</td>\n",
+       "      <td>187</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>250 rows × 2 columns</p>\n",
+       "<p>2300 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      id                                           geometry\n",
-       "0      1  MULTILINESTRING ((-74.01301 40.70215, -74.0116...\n",
-       "1      2  MULTILINESTRING ((-74.01270 40.70275, -74.0118...\n",
-       "2      3  MULTILINESTRING ((-74.01274 40.70146, -74.0098...\n",
-       "3      4  LINESTRING (-74.00029 40.71119, -74.00045 40.7...\n",
-       "4      5  LINESTRING (-73.99137 40.72726, -73.99139 40.7...\n",
-       "..   ...                                                ...\n",
-       "245  248  LINESTRING (-73.99741 40.72164, -73.99389 40.7...\n",
-       "246  249  LINESTRING (-74.00203 40.71159, -74.00252 40.7...\n",
-       "247  250  LINESTRING (-74.00296 40.71334, -74.00150 40.7...\n",
-       "248  251  LINESTRING (-74.00799 40.70899, -74.00720 40.7...\n",
-       "249  252  LINESTRING (-74.01411 40.70697, -74.01368 40.7...\n",
+       "        id                    geometry  closest_road_id\n",
+       "0        0  POINT (-74.00698 40.74748)              119\n",
+       "1        1  POINT (-74.00722 40.74722)              119\n",
+       "2        2  POINT (-74.00721 40.74697)              120\n",
+       "3        3  POINT (-74.00722 40.74722)              119\n",
+       "4        4  POINT (-74.00728 40.74667)              120\n",
+       "...    ...                         ...              ...\n",
+       "2295  2295  POINT (-73.97976 40.71559)              234\n",
+       "2296  2296  POINT (-73.97987 40.71361)               30\n",
+       "2297  2297  POINT (-73.98387 40.72077)              221\n",
+       "2298  2298  POINT (-73.97780 40.71833)              199\n",
+       "2299  2299  POINT (-73.99446 40.72987)              187\n",
        "\n",
-       "[250 rows x 2 columns]"
+       "[2300 rows x 3 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_gdf_road"
+    "df_point"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c497778",
+   "id": "f68112c7",
    "metadata": {},
    "outputs": [],
    "source": []
